
what is buffer - jab bhi hum node js per file create kartai h to node js ko todi si memory chahiyai hoti
              taki vo apnai perform achhai sai kar skkai or usai hum buffer boltai 
-----------------lecture14 crud file system--------------------------------------------


const fs = require('fs')
const path = require('path')
const dirpath = path.join(__dirname,"crud")
//fs.writeFileSync('apple.txt',"this file text")  //yai file merai root folder mai banaigi
//isliy mai issai crud folder mai file banauga
//create method
const filepath =  `${dirpath}/apple.txt`
// fs.writeFileSync(filepath,"this is simple text file")
//read method
// fs.readFile(filepath,'utf8',(error,item)=>{
//   console.log(item)
// })
//update method
// fs.appendFile(filepath," and file name is apple.txt",(err)=>{
//     if(!err){
//         console.log("file is updated")
//     }
// })

//rename
// fs.rename(filepath,`${dirpath}/fruit.txt`,(err)=>{
//     if(!err) {console.log("file name isUpdate")}
// })

//Delete

fs.unlinkSync(`${dirpath}/fruit.txt`)
-----------------------------------close lecture14 file code ------------------------------------------------------






lecture - 15 - Asncronous programming Language
 lecture - 16 Handle Asynchronous Data

lecture - 17 how nodejs work
 //code =>calll Stack => NodeAPI =>event Loop\

 lecture - 18 express js introduction

 simple respone 
 /////////////////////////////////////////
 const express = require('express')
const app = express()

app.get('/',(req,res)=>{
  res.send("hello , this is home page")

})
app.get('/about',(req,res)=>{
    res.send("hello , this is about page")
    
  })


  app.get('/help',(req,res)=>{
    res.send("hello , this is help page")
    
  }) 

app.listen(5000)  //server per run karatai h 

//////////////////////////////////end////////////////////////


lecture - 19 simple unserstanding between Request & Response Params




lecture - 20 
 resp.send() ismai html add kiya













