@@ -143,6 +143,10 @@ lecture - 19 simple unserstanding between Request & Response Params
 lecture - 20 
  resp.send() ismai html add kiya
 
+lecture -21 -  Make Html page
+const publicpath = path.join(__dirname,'public')
+app.use(express.static(publicpath)); ka use karkai public folder kai pages ko access ki api sai 
+style or image issai add nahi kar sktai 
 
 
 
